[package]
name = "trillium-cache"
version = "0.1.0"
edition = "2024"
description = "http cache handler for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "README.md"
keywords = ["trillium", "cache", "http"]
categories = ["caching", "web-programming::http-client"]

[package.metadata.cargo-udeps.ignore]
development = ["trillium-cache"]

[package.metadata.docs.rs]
features = ["client"]

[features]
client = ["dep:trillium-client"]

[dependencies]
fieldwork = "0.5.1"
httpdate = "1.0.3"
log = "0.4.29"
futures-lite = "2.6.1"
moka = { version = "0.12.15", features = ["future"] }
trillium.workspace = true
trillium-caching-headers.workspace = true
trillium-client = { workspace = true, optional = true }
trillium-http = { workspace = true, features = ["unstable"] }
url = "2.5.8"

[dev-dependencies]
trillium-cache = { path = ".", features = ["client"] }
trillium-testing.workspace = true
