[package]
name = "trillium-cache"
version = "0.1.1"
edition = "2024"
description = "http cache handler for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium-cache"
readme = "README.md"
keywords = ["trillium", "cache", "http"]
categories = ["caching", "web-programming::http-client"]

[package.metadata.cargo-udeps.ignore]
development = ["trillium-cache"]

[package.metadata.docs.rs]
features = ["client"]

[features]
client = ["dep:trillium-client"]

[dependencies]
fieldwork = "0.5.2"
httpdate = "1.0.3"
log = "0.4.29"
futures-lite = "2.6.1"
moka = { version = "0.12.15", features = ["future"] }
trillium = "1"
trillium-caching-headers = "0.4"
trillium-client = { version = "0.9", optional = true }
trillium-http = { version = "1", features = ["unstable"] }
url = "2.5.8"

[dev-dependencies]
trillium-cache = { path = ".", features = ["client"] }
trillium-smol = "0.6.1"
trillium-testing = "0.10"
trillium-proxy = "0.8"
env_logger = "0.11"

[[example]]
name = "proxy_cache"
required-features = ["client"]

