[package]
name = "trillium-cache"
version = "0.2.1"
edition = "2024"
description = "http cache handler for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium-cache"
readme = "README.md"
keywords = ["trillium", "cache", "http"]
categories = ["caching", "web-programming::http-client"]

[package.metadata.cargo-udeps.ignore]
development = ["trillium-cache"]

[package.metadata.docs.rs]
features = ["client", "fs", "smol"]

[features]
client = ["dep:trillium-client"]
fs = ["dep:rkyv", "dep:sha2", "dep:cfg-if", "trillium-http/rkyv_08"]
# `tokio::fs` is reactor-bound, so the test harness must run on tokio to exercise the fs backend
# under this feature; forward it to trillium-testing. smol and async-std need no ambient runtime
# (their fs adapters run under trillium-testing's default runtimeless harness), so they don't
# forward — and forwarding more than one runtime would break `--all-features`.
tokio = ["fs", "dep:tokio", "dep:async-compat", "trillium-testing/tokio"]
async-std = ["fs", "dep:async-std"]
smol = ["fs", "dep:async-fs"]

[dependencies]
async-compat = { version = "0.2.5", optional = true }
async-fs = { version = "2.2.0", optional = true }
async-std = { version = "1.13.2", optional = true }
cfg-if = { version = "1.0.4", optional = true }
fieldwork = "0.5.2"
httpdate = "1.0.3"
log = "0.4.29"
futures-lite = "2.6.1"
moka = { version = "0.12.15", features = ["future", "sync"] }
rkyv = { version = "0.8.17", optional = true }
sha2 = { version = "0.10.9", optional = true }
tokio = { version = "1.50.0", features = ["fs", "io-util"], optional = true }
trillium = "1"
trillium-caching-headers = "0.4"
trillium-client = { version = "0.9", optional = true }
trillium-http = { version = "1.4", features = ["unstable"] }
trillium-server-common = "0.7"
url = "2.5.8"

[dev-dependencies]
tempfile = "3"
trillium-cache = { path = ".", features = ["client"] }
trillium-smol = "0.6.1"
trillium-testing = "0.10"
trillium-proxy = "0.8"
env_logger = "0.11"

[[example]]
name = "proxy_cache"
required-features = ["client"]

[[example]]
name = "conformance_proxy"
required-features = ["client"]

[[example]]
name = "tiered_cache"
required-features = ["smol", "client"]

